apply patch by James Thorniley<james_thorniley@yahoo.co.uk>

for "xmlhttprequest breaks on utf-8 strings"

BUG:131242


svn path=/branches/KDE/3.5/kdelibs/; revision=576640