khtml/ecma/xmlhttprequest.cpp
@@ -335,7 +335,7 @@ void XMLHttpRequest::send(const QString& _body)
     // FIXME: determine post encoding correctly by looking in headers
     // for charset.
     QByteArray buf;
-    buf.duplicate(_body.utf8().data(), _body.length());
+    buf.duplicate(_body.utf8().data(), _body.utf8().length());
 
     job = KIO::http_post( url, buf, false );
     if(contentType.isNull())
